# utils

./: CMakeLists.txt  README.md  color_text.cpp  console_print.cpp  console_print.h  display_git_branch.sh  executablename.cpp  executablename.h  genericswitch.h  getbasepath.cpp  getbasepath.h  getfilebasename.cpp  getfilebasename.h  getfileextension.cpp  getfileextension.h  getfilename.cpp  getfilename.h  getfilename_with_timestamp.cpp  getfilename_with_timestamp.h  integer_sequence.cpp  integer_sequence.h  logger.cpp  logger.h  profiler.cpp  profiler.h  pyplot3d.py  stereo_error_chart.py  stringswitch.h  systemtime.cpp  systemtime.h  test.cpp  test_console_print.cpp  timer.cpp  timer.h  utils.h
